shared-business-logics/services/centralized-dashboard/Backend/Java/analytics-services/business-intelligence-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-intelligence-service
  namespace: centralized-dashboard
  labels:
    app: business-intelligence-service
    team: team-f-centralized-dashboard
spec:
  type: ClusterIP
  selector:
    app: business-intelligence-service
  ports:
  - name: http
    port: 8902
    targetPort: 8902
    protocol: TCP
